--- a/CSC225 Project/CSC225 Project.vcxproj
+++ b/CSC225 Project/CSC225 Project.vcxproj
@@ -144,7 +144,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <MASM Include="atoi.asm" />
+    <MASM Include="itoa.asm" />
     <MASM Include="main.asm" />
+    <MASM Include="readline.asm" />
+    <MASM Include="writeline.asm" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
